--- a/src/app/gems/search/search.page.html
+++ b/src/app/gems/search/search.page.html
@@ -37,7 +37,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row>
+  <!-- <ion-row>
     <ion-col  size="12" size-sm="8" offset-sm="2" class="ion-text-center">
       <ion-virtual-scroll [items]="listedLoadedGems">
         <ion-item *virtualItem="let gem"  [routerLink]="['/', 'gems', 'tabs', 'search', gem.id]" detail  >
@@ -54,7 +54,7 @@
         </ion-item>
       </ion-virtual-scroll>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 </ion-grid>
 
 </ion-content>
