--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -31,7 +31,7 @@
 
       </ion-col>
     </ion-row>
-
+<!-- 
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-item>
@@ -41,7 +41,7 @@
         </ion-item>
 
       </ion-col>
-    </ion-row>
+    </ion-row> -->
 
 
     <ion-row>
@@ -55,7 +55,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-item>
           <ion-label position="floating">User Name</ion-label>
@@ -64,7 +64,7 @@
         </ion-item>
 
       </ion-col>
-    </ion-row>
+    </ion-row> -->
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-item>
@@ -77,7 +77,7 @@
     </ion-row>
 
     <ion-row>
-      <ion-button [disabled]="!form.valid" (click)="onCreateGem()"[routerLink]="['/', 'places', 'tabs', 'discover']">Submit</ion-button>
+      <ion-button [disabled]="!form.valid" (click)="onsingup()">Submit</ion-button>
     </ion-row>
 
       
