--- a/src/app/gems/gems.page.html
+++ b/src/app/gems/gems.page.html
@@ -11,8 +11,8 @@
       <ion-icon name="folder-sharp" size="large"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button routerLink="/payment" routerDirection="root">
-      <ion-label>Pay</ion-label>
+    <ion-tab-button routerLink="/biding" routerDirection="root">
+      <ion-label>Bid</ion-label>
       <ion-icon name="wallet" size="large"></ion-icon>
     </ion-tab-button>
 
