--- a/src/app/gems/search/gem-detail/gem-detail.page.html
+++ b/src/app/gems/search/gem-detail/gem-detail.page.html
@@ -24,7 +24,7 @@
     </ion-row>
     <ion-row >
   <ion-button color="primary" (click)="onBidGem()">Bid Gem</ion-button>
-  <ion-button color="primary" >Pay Gem</ion-button>
+  <ion-button color="primary" routerLink="/payment" routerDirection="root">Pay Gem</ion-button>
 </ion-row>
 </ion-grid>
 </ion-content>
