--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
  
   <ion-row class="ava">  
     <ion-col>
-      <ion-button [routerLink]="['/', 'registration']">Sign In</ion-button>
+      <ion-button [routerLink]="['/', 'registration']">Sign </ion-button>
     </ion-col>
 
 </ion-row>
