--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -8,5 +8,15 @@
 </ion-header>
 
 <ion-content>
+  <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
+  <ion-item>
+    <ion-label>start time</ion-label>
+    <ion-datetime displayFormat="HH:mm:ss"></ion-datetime>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>end time</ion-label>
+    <ion-datetime displayFormat="HH:mm:ss"></ion-datetime>
+  </ion-item>
 
 </ion-content>
