--- a/src/app/biding/create-biding/create-biding.component.html
+++ b/src/app/biding/create-biding/create-biding.component.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content class="ion-text-center">
-<form>
+<form (ngSubmit)="onBidGem()" #f="ngForm">
 <ion-grid>
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
@@ -52,7 +52,7 @@
   </ion-row>
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
-      <ion-button  type="submit"   color="primary">Bid</ion-button>
+      <ion-button  type="submit"   color="primary" [disabled]="!f.valid">Bid</ion-button>
     </ion-col>
   </ion-row>
 
