--- a/src/app/gems/gem-list/new-gem/new-gem.page.html
+++ b/src/app/gems/gem-list/new-gem/new-gem.page.html
@@ -64,6 +64,16 @@
       </ion-col>
     </ion-row>
 
+    <!-- <ion-row>
+      <ion-col size-sm="6" offset-sm="3" >
+        <ion-item>
+          <ion-label position="floating">Price</ion-label>
+          <ion-input type="number" formControlName="price"></ion-input>
+        </ion-item>
+
+      </ion-col>
+    </ion-row> -->
+
     <ion-row>
       <ion-col size-sm="6" offset-sm="3" >
         <ion-item>
