--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,7 +14,7 @@
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-item>
-          <ion-label position="floating">User Name</ion-label>
+          <ion-label position="floating">Email</ion-label>
           <ion-input type="text" formControlName="user"></ion-input>
         
         </ion-item>
