add fixed gem list UI and bid gems list UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,16 +18,16 @@
       </ion-menu-toggle>
 
       <ion-menu-toggle>
-        <ion-item lines="none" routerLink="/gems/tabs/search">
+        <ion-item lines="none" routerLink="/gems/fixed-gems-list">
           <ion-icon name="search-circle" slot="start"></ion-icon>
-          <ion-label>Search Gems</ion-label>
+          <ion-label>Gems List</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
       <ion-menu-toggle>
-        <ion-item lines="none" routerLink="biding">
+        <ion-item lines="none" routerLink="gems/bid-gems-list">
           <ion-icon name="checkbox" slot="start"></ion-icon>
-          <ion-label>Your Biding Gems</ion-label>
+          <ion-label>Gems List Bid</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
