--- a/src/app/gems/new-gem/new-gem.page.html
+++ b/src/app/gems/new-gem/new-gem.page.html
@@ -28,19 +28,19 @@
     <ion-row>
       <ion-col>
         <ion-list>
-          <ion-radio-group value="biff">
+          <ion-radio-group  formControlName = "type">
             <ion-list-header>
               <ion-label>Gem Type</ion-label>
             </ion-list-header>
         
             <ion-item>
               <ion-label>Fixed Gem</ion-label>
-              <ion-radio slot="start" value="biff"></ion-radio>
+              <ion-radio   slot="start" value="griff"  ></ion-radio>
             </ion-item>
         
             <ion-item>
               <ion-label>Bid Gem</ion-label>
-              <ion-radio slot="start" value="griff"></ion-radio>
+              <ion-radio  slot="start" value="biff" ></ion-radio>
             </ion-item>
           </ion-radio-group>
         </ion-list>
