--- a/src/app/gems/fixed-gems-list/fixed-gems-list.page.html
+++ b/src/app/gems/fixed-gems-list/fixed-gems-list.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button ></ion-menu-button>
     </ion-buttons>
-    <ion-title>My gem-list</ion-title>
+    <ion-title>Fixed Gems List</ion-title>
     <ion-buttons slot="primary">
-        <ion-button routerLink="/gems/tabs/gem-list/new-gem">
+        <ion-button routerLink="/new-gem">
           <ion-icon name="add" slot="icon-only"></ion-icon>
         </ion-button>
     </ion-buttons>
@@ -19,7 +19,7 @@
       <ion-col  size="12" size-sm="8" offset-sm="2" >
         <ion-list>
           <ion-item-sliding  *ngFor="let gems of gemlist" #slidingItem>
-            <ion-item [routerLink]="['/', 'gems', 'tabs', 'gem-list', gems.id]" >
+            <ion-item [routerLink]="['/', gems.id]" >
               <ion-thumbnail slot="start">
                 <ion-img [src]="gems.imageUrl"></ion-img>
               </ion-thumbnail>
