--- a/src/app/gems/fixed-gems-list/fixed-gems-list.page.html
+++ b/src/app/gems/fixed-gems-list/fixed-gems-list.page.html
@@ -4,11 +4,6 @@
       <ion-menu-button ></ion-menu-button>
     </ion-buttons>
     <ion-title>Fixed Gems List</ion-title>
-    <ion-buttons slot="primary">
-        <ion-button routerLink="/new-gem">
-          <ion-icon name="add" slot="icon-only"></ion-icon>
-        </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -38,4 +33,9 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button routerLink="/new-gem">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
