Changed manu bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,40 +11,25 @@
   <ion-content>
     <ion-list>
       <ion-menu-toggle>
-        <ion-item lines="none" routerLink="/home">
+        <ion-item lines="none" routerLink="/dashboard">
           <ion-icon name="home" slot="start"></ion-icon>
-          <ion-label>Home</ion-label>
+          <ion-label>Dashboard</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
       <ion-menu-toggle>
         <ion-item lines="none" routerLink="/gems/fixed-gems-list">
           <ion-icon name="search-circle" slot="start"></ion-icon>
-          <ion-label>Gems List</ion-label>
+          <ion-label>Fixed Gems List</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
       <ion-menu-toggle>
         <ion-item lines="none" routerLink="gems/bid-gems-list">
           <ion-icon name="checkbox" slot="start"></ion-icon>
-          <ion-label>Gems List Bid</ion-label>
+          <ion-label>Bid Gems List</ion-label>
         </ion-item>
       </ion-menu-toggle>
-
-
-        <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/login">
-            <ion-icon name="log-in" slot="start"></ion-icon>
-            <ion-label>Login</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/registration">
-            <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-            <ion-label>Registration</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
 
       <ion-menu-toggle>
           
