--- a/src/app/gems/new-gem/new-gem.page.html
+++ b/src/app/gems/new-gem/new-gem.page.html
@@ -4,11 +4,6 @@
       <ion-back-button defaultHref="/gems/tabs/gem-list"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Gem</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button (click)="onCreateGem()" [disabled]="!form.valid">
-        <ion-icon name="checkmark-circle-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -104,7 +99,8 @@
       </ion-col>
     </ion-row> -->
     
-    
+    <ion-button expand="block" fill="outline" (click)="onCreateGem()" [disabled]="!form.valid">Add Gem</ion-button>
+    <ion-button expand="block" color = "danger" fill="outline"  [disabled]="!form.valid" (click)="onCancle()">Cancle</ion-button>
   </ion-grid>
 </form>
 
