Fixed isuue in routing in new gem add interface

--- a/src/app/gems/new-gem/new-gem.page.html
+++ b/src/app/gems/new-gem/new-gem.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/gems/tabs/gem-list"></ion-back-button>
+      <ion-back-button defaultHref="privUrl"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Gem</ion-title>
   </ion-toolbar>
